--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "prismjs": "^1.15.0",
     "react": "^16.5.2",
     "react-addons-perf": "^15.4.2",
-    "react-dom": "^16.5.2",
+    "react-dom": "^16.13.1",
     "react-facebook": "^5.0.3",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.1.0",
@@ -57,7 +57,7 @@
     "gatsby"
   ],
   "scripts": {
-    "deploy": "gatsby build && gh-pages -d public -b master",
+    "deploy": "gatsby clean && gatsby build && gh-pages -d public -b master",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "devhost": "gatsby develop --host 192.168.0.112",
