--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "gatsby-casper",
-  "description": "Casper for gatsby",
-  "version": "0.0.0",
+  "name": "asd-casper",
+  "description": "asd for gatsby",
+  "version": "0.0.1",
   "private": true,
-  "author": "Scott Cooper <scttcper@gmail.com>",
+  "author": "asd Cooper <asd@asd.com>",
   "license": "MIT",
   "scripts": {
+    "deploy": "gatsby clean && gatsby build && gh-pages -d public -b master",
     "build": "gatsby build",
     "dev": "gatsby develop",
     "lint": "eslint --ext .js,.ts,.tsx .",
     "lint:fix": "eslint --fix --ext .js,.ts,.tsx .",
     "start": "npm run dev",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gatsby clean && gatsby build && gh-pages -d public -b master"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@emotion/react": "11.1.5",
@@ -49,7 +49,7 @@
     "polished": "4.1.1",
     "postcss-color-function": "4.1.0",
     "prism-themes": "1.6.0",
-    "prismjs": "1.23.0",
+    "prismjs": "1.24.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-emotion": "10.0.0",
