--- a/src/content/author.yaml
+++ b/src/content/author.yaml
@@ -1,23 +1,8 @@
-- id: Ghost
-  avatar: avatars/ghost.png
-  bio: The professional publishing platform
-  twitter: TryGhost
-  facebook: ghost
-  website: https://ghost.org/
-  location: San Francisco
-- id: Another Author
-  avatar: avatars/ghost.png
-  bio: This is another test author with a profile background image
-  twitter: TryGhost
-  facebook: ghost
-  website: https://ghost.org/
-  location: San Francisco
-  profile_image: img/alex-knight-326705-unsplash.jpg
-- id: JTree
-  avatar: avatars/ghost.png
-  bio: This is another test author with a profile background image
-  twitter: TryGhost
-  facebook: ghost
-  website: https://ghost.org/
-  location: San Francisco
-  profile_image: img/alex-knight-326705-unsplash.jpg
+- id: JTRee
+  avatar: avatars/JTRee.png
+  bio: Try Try 끝날때 까지 
+  facebook: kjmzzang01
+  website: https://junmock.github.io/
+  github: JunMock
+  location: Seoul, Korea
+  profile_image: img/author-cover.jpg
