--- a/src/content/tag.yaml
+++ b/src/content/tag.yaml
@@ -1,3 +1,3 @@
-- id: speeches
-  description: Some of the greatest words ever spoken.
-  image: img/speeches-cover.jpg
+- id: 개발 지식
+  description: 개발 하면서 필요한 다양한 지식들을 모아모아
+  image: img/author-cover.jpg
