--- a/src/content/tag.yaml
+++ b/src/content/tag.yaml
@@ -1,3 +1,9 @@
 - id: 개발 지식
   description: 개발 하면서 필요한 다양한 지식들을 모아모아
   image: img/author-cover.jpg
+- id: 자바 API
+  description: 개발 하면서 필요한 다양한 지식들을 모아모아
+  image: img/author-cover.jpg
+- id: DB
+  description: 개발 하면서 필요한 다양한 지식들을 모아모아
+  image: img/author-cover.jpg
