--- a/src/content/tag.yaml
+++ b/src/content/tag.yaml
@@ -7,3 +7,19 @@
 - id: DB
   description: 개발 하면서 필요한 다양한 지식들을 모아모아
   image: img/author-cover.jpg
+- id: 알고리즘
+  description: 알고리즘 정리
+  image: img/author-cover.jpg
+- id: 알고리즘 문제 풀이
+  description: 알고리즘 문제 풀이 - boj, sw ex , jungol
+  image: img/author-cover.jpg
+- id: 자료구조
+  description: 자료구조 - 선형구조, 비선형구조
+  image: img/author-cover.jpg
+- id: 선형구조
+  description: 자료구조 - 선형구조 - 리스트, 스택, 큐, 뎈
+  image: img/author-cover.jpg
+- id: 비선형구조
+  description: 자료구조 - 비선형구조 - 트리, 그래프
+  image: img/author-cover.jpg
+  
