add good code and ppomnae first post

--- a/src/content/tag.yaml
+++ b/src/content/tag.yaml
@@ -22,4 +22,7 @@
 - id: 비선형구조
   description: 자료구조 - 비선형구조 - 트리, 그래프
   image: img/author-cover.jpg
+- id: 뽐내
+  description: ppomnae 프로젝트를 진행하면서 겪는 시행착오들을 
+  image: img/author-cover.jpg
   
